[package]
name = "bb8-diesel"
description = "bb8 connection manager for Diesel"
version = "0.3.0"
authors = ["Marko Mijalkovic <marko.mijalkovic97@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/overdrivenpotato/bb8-diesel"
keywords = ["diesel", "bb8", "r2d2", "pool", "tokio", "async"]

[dependencies]
bb8 = "0.7"
async-trait = "0.1.42"
diesel = { version = "1.4", default-features = false, features = [ "r2d2" ] }
tokio = { version = "1.0", default-features = false, features = [ "rt-multi-thread" ] }
