[package]
name = "async-bb8-diesel"
description = "async bb8 connection manager for Diesel"
version = "0.1.0"
authors = ["Sean Klein <sean@oxide.computer>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/oxidecomputer/async-bb8-diesel"
keywords = ["diesel", "r2d2", "pool", "tokio", "async"]

[dependencies]
bb8 = "0.7"
async-trait = "0.1.51"
diesel = { git = "https://github.com/diesel-rs/diesel", rev = "a39dd2e", default-features = false, features = [ "r2d2" ] }
tokio = { version = "1.0", default-features = false, features = [ "rt-multi-thread" ] }

[dev-dependencies]
diesel = { git = "https://github.com/diesel-rs/diesel", rev = "a39dd2e", features = [ "postgres", "r2d2" ] }
tokio = { version = "1.0", features = [ "macros"] }
